--- a/contact.html
+++ b/contact.html
@@ -151,7 +151,7 @@
             width: 347px;
         }
 
-        .small-btn {
+        .mt2021 .small-btn {
             width: 217px;
         }
 
@@ -475,167 +475,7 @@
 
         }
 
-        /* @@@@@@@@@@@@@@@@@@@@@@@@@@@@@ Fonts @@@@@@@@@@@@@@@@@@@@@@@@@@@@@ */
-        .font-weight-bold {
-            font-weight: 700;
-        }
 
-        .font-weight-normal {
-            font-weight: 400;
-        }
-
-        .font-weight-light {
-            font-weight: 300;
-        }
-
-        .mt2021 h1,
-        .mt2021 h2,
-        .mt2021 h4 {
-            font-family: 'Times New Roman';
-        }
-
-        .mt2021 h3,
-        .mt2021 h5,
-        .mt2021 h6,
-        .mt2021 p,
-        .mt2021 .h7,
-        .mt2021 .h8,
-        .mt2021 .h9,
-        .mt2021 .h10,
-        .mt2021 .h11,
-        .mt2021 .h12 {
-            font-family: 'Montserrat';
-        }
-
-        .mt2021 h1 {
-            font-size: 36px;
-        }
-
-        .mt2021 h2 {
-            font-size: 32px;
-        }
-
-        .mt2021 h3 {
-            font-size: 32px;
-        }
-
-        .mt2021 h4 {
-            font-size: 25px;
-        }
-
-        .mt2021 h5 {
-            font-size: 22px;
-        }
-
-        .mt2021 h6 {
-            font-size: 17px;
-        }
-
-        .mt2021 p {
-            font-size: 17px;
-        }
-
-        .h7 {
-            font-size: 18px;
-        }
-
-        .h8 {
-            font-size: 16px;
-        }
-
-        .h9 {
-            font-size: 14px;
-        }
-
-        .h10 {
-            font-size: 13px;
-        }
-
-        .h11 {
-            font-size: 12px;
-        }
-
-        .h12 {
-            font-size: 11px;
-        }
-
-        @media (max-width:767.98px) {
-            .mt2021 .mt2021 h1 {
-                font-size: 30px;
-            }
-
-            .mt2021 .mt2021 h2 {
-                font-size: 25px;
-            }
-
-            .mt2021 .mt2021 h3 {
-                font-size: 25px;
-            }
-
-            .mt2021 .mt2021 h4 {
-                font-size: 22px;
-            }
-
-            .mt2021 .mt2021 h5 {
-                font-size: 18px;
-            }
-
-            .mt2021 .mt2021 h6 {
-                font-size: 17px;
-            }
-
-            .mt2021 .mt2021 p {
-                font-size: 17px;
-            }
-
-            .h7 {
-                font-size: 16px;
-            }
-
-            .h8 {
-                font-size: 15px;
-            }
-
-        }
-
-        @media (max-width:480px) {
-            .mt2021 h1 {
-                font-size: 25px;
-            }
-
-            .mt2021 h2 {
-                font-size: 20px;
-            }
-
-            .mt2021 h3 {
-                font-size: 20px;
-            }
-
-            .mt2021 h4 {
-                font-size: 18px;
-            }
-
-            .mt2021 h5 {
-                font-size: 17px;
-            }
-
-            .mt2021 h6 {
-                font-size: 14px;
-            }
-
-            .mt2021 p {
-                font-size: 14px;
-            }
-
-            .h7 {
-                font-size: 15px;
-            }
-
-            .h8 {
-                font-size: 14px;
-            }
-
-        }
 
         /* @@@@@@@@@@@@@@@@@@@@@@@@@@@@@ Fonts @@@@@@@@@@@@@@@@@@@@@@@@@@@@@ */
         .font-weight-bold {
@@ -722,31 +562,31 @@
         }
 
         @media (max-width:767.98px) {
-            .mt2021 .mt2021 h1 {
+            .mt2021 h1 {
                 font-size: 30px;
             }
 
-            .mt2021 .mt2021 h2 {
+            .mt2021 h2 {
                 font-size: 25px;
             }
 
-            .mt2021 .mt2021 h3 {
+            .mt2021 h3 {
                 font-size: 25px;
             }
 
-            .mt2021 .mt2021 h4 {
+            .mt2021 h4 {
                 font-size: 22px;
             }
 
-            .mt2021 .mt2021 h5 {
+            .mt2021 h5 {
                 font-size: 18px;
             }
 
-            .mt2021 .mt2021 h6 {
+            .mt2021 h6 {
                 font-size: 17px;
             }
 
-            .mt2021 .mt2021 p {
+            .mt2021 p {
                 font-size: 17px;
             }
 
@@ -885,41 +725,57 @@
                     <div class="col-md-12">
                         <div>
                             <h5 class=" mb-4 font-weight-normal">Locations</h5>
+
                             <div class="mb-5">
-                                <h6 class="font-weight-normal text-brown">JEM</h6>
-                                <p class="py-3 h9">50 Jurong Gateway Road #01-60, Singapore 608539 <br />
+                                <h6 class="font-weight-bold text-brown">TANJONG PAGAR</h6>
+                                <p class="py-3 h9">91 Tanjong Pagar Road<br />
+                                    Singapore 088512<br />
+                                    Monday - Sunday: 12pm - 8.30pm<br />
+                                    (Last appointment at 7:30pm)</p>
 
-                                    Everyday 11.00am - 9.30pm</p>
+                                <p class="h9">
+                                    Call: <a href="tel:+6562990110"> +65 6299 0110</a>
+                                    <br />
 
-                                <p class="h9"> Call: <a href="tel:+6569513296"> +65 6951 3296</a><br />
-
-                                    Email: <a href="mailto:service@michaeltrio.com">service@michaeltrio.com</a><br />
-
-                                    Last appointment at 8:30pm</p>
+                                    Email: <a href="mailto:service@michaeltrio.com">service@michaeltrio.com</a>
+                                </p>
                             </div>
                             <div class="mb-5">
-                                <h6 class="font-weight-normal text-brown">TANJONG PAGAR</h6>
-                                <p class="py-3 h9">91 Tanjong Pagar Road, Singapore 088512<br />
+                                <h6 class="font-weight-bold text-brown">JEM</h6>
+                                <p class="py-3 h9">50 Jurong Gateway Road, #01-60, <br />
+                                    Singapore 608549 <br />
+                                    Monday - Thursday: 11am - 9pm <br />
+                                    (Last appointment at 8pm) <br />
+                                    Friday - Sunday: 11am - 9.30pm <br />
+                                    (Last appointment at 8.30pm)</p>
 
-                                    Everyday 12.00pm - 8.30pm</p>
+                                <p class="h9">
+                                    Call: <a href="tel:+6569513296"> +65 6951 3296</a>
+                                    <br />
 
-                                <p class="h9">Call: <a href="tel:+6562990110"> +65 6299 0110</a><br />
+                                    Email: <a href="mailto:service@michaeltrio.com">service@michaeltrio.com</a>
 
-                                    Email: <a href="mailto:service@michaeltrio.com">service@michaeltrio.com</a><br />
-
-                                    Last appointment at 7:30pm</p>
+                                </p>
                             </div>
                             <div class="mb-5">
-                                <h6 class="font-weight-normal text-brown">NORTHPOINT CITY</h6>
-                                <p class="py-3 h9">Yishun Ave 2, North Wing, #01-22 Northpoint City<br />
+                                <h6 class="font-weight-bold text-brown">NORTHPOINT CITY</h6>
+                                <p class="py-3 h9">
+                                    Yishun Avenue 2, North Wing, #01-22 Northpoint City <br />
+                                    Singapore 769098 <br />
+                                    Monday - Thursday: 11am - 9pm <br />
+                                    (Last appointment at 8pm) <br />
+                                    Friday - Sunday: 11am - 9.30pm <br />
+                                    (Last appointment at 8.30pm)
+                                </p>
 
-                                    Everyday, 11pm - 9.30pm</p>
+                                <p class="h9">
+                                    Call: <a href="tel:+6569691492"> +65 6969 1492</a>
+                                    <br />
 
-                                <p class="h9">Call: <a href="tel:+6569691492"> +65 6969 1492</a><br />
+                                    Email: <a href="mailto:service@michaeltrio.com">service@michaeltrio.com</a>
 
-                                    Email: <a href="mailto:service@michaeltrio.com">service@michaeltrio.com</a><br />
 
-                                    Last appointment at 8:30pm</p>
+                                </p>
                             </div>
                             <div class="mb-5">
                                 <p class="h9"> Priority give to appointment*</p>
