--- a/home.html
+++ b/home.html
@@ -474,167 +474,6 @@
 
         }
 
-        /* @@@@@@@@@@@@@@@@@@@@@@@@@@@@@ Fonts @@@@@@@@@@@@@@@@@@@@@@@@@@@@@ */
-        .font-weight-bold {
-            font-weight: 700;
-        }
-
-        .font-weight-normal {
-            font-weight: 400;
-        }
-
-        .font-weight-light {
-            font-weight: 300;
-        }
-
-        .mt2021 h1,
-        .mt2021 h2,
-        .mt2021 h4 {
-            font-family: 'Times New Roman';
-        }
-
-        .mt2021 h3,
-        .mt2021 h5,
-        .mt2021 h6,
-        .mt2021 p,
-        .mt2021 .h7,
-        .mt2021 .h8,
-        .mt2021 .h9,
-        .mt2021 .h10,
-        .mt2021 .h11,
-        .mt2021 .h12 {
-            font-family: 'Montserrat';
-        }
-
-        .mt2021 h1 {
-            font-size: 36px;
-        }
-
-        .mt2021 h2 {
-            font-size: 32px;
-        }
-
-        .mt2021 h3 {
-            font-size: 32px;
-        }
-
-        .mt2021 h4 {
-            font-size: 25px;
-        }
-
-        .mt2021 h5 {
-            font-size: 22px;
-        }
-
-        .mt2021 h6 {
-            font-size: 17px;
-        }
-
-        .mt2021 p {
-            font-size: 17px;
-        }
-
-        .h7 {
-            font-size: 18px;
-        }
-
-        .h8 {
-            font-size: 16px;
-        }
-
-        .h9 {
-            font-size: 14px;
-        }
-
-        .h10 {
-            font-size: 13px;
-        }
-
-        .h11 {
-            font-size: 12px;
-        }
-
-        .h12 {
-            font-size: 11px;
-        }
-
-        @media (max-width:767.98px) {
-            .mt2021 .mt2021 h1 {
-                font-size: 30px;
-            }
-
-            .mt2021 .mt2021 h2 {
-                font-size: 25px;
-            }
-
-            .mt2021 .mt2021 h3 {
-                font-size: 25px;
-            }
-
-            .mt2021 .mt2021 h4 {
-                font-size: 22px;
-            }
-
-            .mt2021 .mt2021 h5 {
-                font-size: 18px;
-            }
-
-            .mt2021 .mt2021 h6 {
-                font-size: 17px;
-            }
-
-            .mt2021 .mt2021 p {
-                font-size: 17px;
-            }
-
-            .h7 {
-                font-size: 16px;
-            }
-
-            .h8 {
-                font-size: 15px;
-            }
-
-        }
-
-        @media (max-width:480px) {
-            .mt2021 h1 {
-                font-size: 25px;
-            }
-
-            .mt2021 h2 {
-                font-size: 20px;
-            }
-
-            .mt2021 h3 {
-                font-size: 20px;
-            }
-
-            .mt2021 h4 {
-                font-size: 18px;
-            }
-
-            .mt2021 h5 {
-                font-size: 17px;
-            }
-
-            .mt2021 h6 {
-                font-size: 14px;
-            }
-
-            .mt2021 p {
-                font-size: 14px;
-            }
-
-            .h7 {
-                font-size: 15px;
-            }
-
-            .h8 {
-                font-size: 14px;
-            }
-
-        }
 
         /* @@@@@@@@@@@@@@@@@@@@@@@@@@@@@ Fonts @@@@@@@@@@@@@@@@@@@@@@@@@@@@@ */
         .font-weight-bold {
@@ -721,31 +560,31 @@
         }
 
         @media (max-width:767.98px) {
-            .mt2021 .mt2021 h1 {
+            .mt2021 h1 {
                 font-size: 30px;
             }
 
-            .mt2021 .mt2021 h2 {
+            .mt2021 h2 {
                 font-size: 25px;
             }
 
-            .mt2021 .mt2021 h3 {
+            .mt2021 h3 {
                 font-size: 25px;
             }
 
-            .mt2021 .mt2021 h4 {
+            .mt2021 h4 {
                 font-size: 22px;
             }
 
-            .mt2021 .mt2021 h5 {
+            .mt2021 h5 {
                 font-size: 18px;
             }
 
-            .mt2021 .mt2021 h6 {
+            .mt2021 h6 {
                 font-size: 17px;
             }
 
-            .mt2021 .mt2021 p {
+            .mt2021 p {
                 font-size: 17px;
             }
 
@@ -797,6 +636,12 @@
             }
 
         }
+
+        /* @@@@@@@@@@@@@@@@@@@@@@@@@@@@@ Home @@@@@@@@@@@@@@@@@@@@@@@@@@@@@ */
+
+
+
+
 
         .home-engagement .btn {
             display: inline-block;
@@ -887,6 +732,29 @@
             display: block;
         }
 
+        .home-tanjong-bg {
+            background-image: url(https://d213t4exkgxsjh.cloudfront.net/assets/images/store-tjp.jpg);
+            background-size: cover;
+            background-position: center center;
+            min-height: 450px;
+
+        }
+
+        .home-jem-bg {
+            background-image: url(https://d213t4exkgxsjh.cloudfront.net/assets/images/store-jem.jpg);
+            background-size: cover;
+            background-position: center center;
+            min-height: 450px;
+
+        }
+
+        .home-np-bg {
+            background-image: url(https://d213t4exkgxsjh.cloudfront.net/assets/images/store-np.jpg);
+            background-size: cover;
+            background-position: center center;
+            min-height: 450px;
+        }
+
         @media (max-width: 991.98px) {
             .home-jewel::before {
                 font-size: 7rem;
@@ -896,6 +764,13 @@
 
 
         @media (max-width: 767.98px) {
+
+            .home-jem-bg,
+            .home-tanjong-bg,
+            .home-np-bg {
+                background-image: none;
+                min-height: auto;
+            }
 
 
             .home-jewel::before {
@@ -996,10 +871,10 @@
                             <h6 class="mb-4">In 2 Easy Steps</h6>
 
                             <div>
-                                <a href="https://www.michaeltrio.com/engagement-rings/setting/"
+                                <a href="https://www.michaeltrio.com/loose-diamonds/all-diamonds/"
                                     class="btn btn-blue small-btn mb-2 ">Start
                                     With A Diamond</a>
-                                <a href="https://www.michaeltrio.com/loose-diamonds/all-diamonds/"
+                                <a href="https://www.michaeltrio.com/engagement-rings/setting/"
                                     class="btn btn-blue small-btn mb-2">Start With A Setting</a>
                             </div>
 
@@ -1182,8 +1057,10 @@
                             <h1 class="text-center">Diamonds</h1>
                             <p class="py-3 text-center">Explore our diamonds in 360° HD. Inspect them with up to 40x
                                 magnification and review the 4Cs together with the grading certification. </p>
-                            <a class="btn btn-blue small-btn mb-3" href="#">Earth Natural </a>
-                            <a class="btn btn-blue small-btn " href="#">Lab Created </a>
+                            <a class="btn btn-blue small-btn mb-3"
+                                href="https://www.michaeltrio.com/loose-diamonds/all-diamonds">Earth Natural </a>
+                            <a class="btn btn-blue small-btn "
+                                href="https://www.michaeltrio.com/loose-diamonds/lab-grown-diamonds">Lab Created </a>
 
                         </div>
                     </div>
@@ -1350,7 +1227,8 @@
                                     Every story is unique. Celebrate your love story with a custom engagement ring,
                                     tailor-made to suit the person you love.
                                 </p>
-                                <a href="" class="btn btn-blue small-btn">Explore Now </a>
+                                <a href="https://www.michaeltrio.com/customisation"
+                                    class="btn btn-blue small-btn">Explore Now </a>
                             </div>
                         </div>
 
@@ -1370,7 +1248,7 @@
                 <div class="row ">
 
                     <div class="col-sm-8 col-xs-12">
-                        <a href="https://www.michaeltrio.com/wedding-bands/men/" class="textblack">
+                        <a href="https://www.michaeltrio.com/jewellery/rings" class="textblack">
                             <div class="bg-orange mb-3">
                                 <div>
                                     <img src="https://d213t4exkgxsjh.cloudfront.net/assets/images/front-ring.jpg" alt=""
@@ -1382,7 +1260,7 @@
                         </a>
                     </div>
                     <div class="col-sm-8 col-xs-12">
-                        <a href="https://www.michaeltrio.com/wedding-bands/men/" class="textblack">
+                        <a href="https://www.michaeltrio.com/jewellery/earrings" class="textblack">
                             <div class="bg-orange mb-3">
                                 <div>
                                     <img src="https://d213t4exkgxsjh.cloudfront.net/assets/images/front-earring.jpg"
@@ -1394,7 +1272,7 @@
                         </a>
                     </div>
                     <div class="col-sm-8 col-xs-12">
-                        <a href="https://www.michaeltrio.com/wedding-bands/men/" class="textblack">
+                        <a href="https://www.michaeltrio.com/jewellery/necklaces" class="textblack">
                             <div class="bg-orange mb-3">
                                 <div>
                                     <img src="https://d213t4exkgxsjh.cloudfront.net/assets/images/front-necklace.jpg"
@@ -1407,7 +1285,7 @@
                     </div>
 
                     <div class="col-sm-8 col-xs-12">
-                        <a href="https://www.michaeltrio.com/wedding-bands/women/" class="textblack">
+                        <a href="https://www.michaeltrio.com/jewellery/bracelets" class="textblack">
                             <div class="bg-orange mb-3">
                                 <div>
                                     <img src="https://d213t4exkgxsjh.cloudfront.net/assets/images/front-bracelet.jpg"
@@ -1460,67 +1338,86 @@
 
                 <h1 class="mb-5">Schedule An Appointment With Us </h1>
                 <div class="row ">
-                    <div class="col-sm-12 col-xs-24 p-0">
+                    <div class="col-sm-12 col-xs-24 p-0 home-tanjong-bg box">
                         <img src="https://d213t4exkgxsjh.cloudfront.net/assets/images/store-tjp.jpg" alt=""
-                            class="w-100">
+                            class="w-100 visible-xs">
                     </div>
                     <div class="col-sm-12 col-xs-24 p-0 box">
                         <div class="py-5">
-                            <h3>Tanjong Pagar Showroom</h3>
-                            <p class="my-3">
-                                91 Tanjong Pagar Road S088512<br />
+                            <h5 class="mb-3">Tanjong Pagar Showroom</h5>
+                            <p class="mb-2">
+                                91 Tanjong Pagar Road S088512 </p>
 
-                                Monday - Sunday: 12pm - 8.30pm<br />
-                                +65 6299 0110<br />
+                            <p class="mb-2"> Monday - Sunday: 12pm - 8.30pm<br />
+                                <span class="h9"> (Last appointment at 7:30pm) </span>
                             </p>
-                            <a href="https://www.michaeltrio.com/make-an-appointment?location=jem"
-                                class="btn btn-blue small-btn">Book
-                                Now</a>
-                        </div>
-                    </div>
-                </div>
 
-                <div class="row ">
-                    <div class="col-sm-12 col-xs-24 p-0 visible-xs">
-                        <img src="https://d213t4exkgxsjh.cloudfront.net/assets/images/store-jem.jpg" alt=""
-                            class="w-100">
-                    </div>
-
-                    <div class="col-sm-12 col-xs-24 p-0 box">
-                        <div class="py-5">
-                            <h3>JEM Showroom</h3>
-                            <p class="my-3">
-
-                                50 Jurong Gateway<br />
-                                #01-60 S608549<br />
-                                Monday - Sunday: 11am - 9pm<br />
-                                +65 6951 3296
+                            <p class="mb-3">
+                                Call: <a href="tel:+6562990110">+65 62990110</a>
                             </p>
                             <a href="https://www.michaeltrio.com/make-an-appointment?location=tp"
                                 class="btn btn-blue small-btn">Book
                                 Now</a>
                         </div>
                     </div>
-                    <div class="col-sm-12 col-xs-24 p-0 hidden-xs">
+                </div>
+
+                <div class="row ">
+                    <div class="col-sm-12 col-xs-24 p-0 box visible-xs">
                         <img src="https://d213t4exkgxsjh.cloudfront.net/assets/images/store-jem.jpg" alt=""
-                            class="w-100">
+                            class="w-100 ">
+                    </div>
+
+                    <div class="col-sm-12 col-xs-24 p-0 box">
+                        <div class="py-5">
+                            <h5 class="mb-3">JEM Showroom</h5>
+                            <p class="mb-2">
+                                50 Jurong Gateway Rd, #01-60,<br />
+                                S608549</p>
+
+                            <p class="mb-2"> Monday - Thursday: 11am - 9pm<br />
+                                <span class="h9"> (Last appointment at 8pm) </span>
+                            </p>
+
+                            <p class="mb-2"> Friday - Sunday: 11am - 9.30pm<br />
+                                <span class="h9"> (Last appointment at 8.30pm) </span>
+                            </p>
+
+                            <p class="mb-3">
+                                Call: <a href="tel:+6569513296">+65 6951 3296</a>
+                            </p>
+                            <a href="https://www.michaeltrio.com/make-an-appointment?location=jem"
+                                class="btn btn-blue small-btn">Book
+                                Now</a>
+                        </div>
+                    </div>
+                    <div class="col-sm-12 col-xs-24 p-0 hidden-xs home-jem-bg box">
+
                     </div>
                 </div>
 
                 <div class="row ">
-                    <div class="col-sm-12 col-xs-24 p-0">
+                    <div class="col-sm-12 col-xs-24 p-0 home-np-bg box">
                         <img src="https://d213t4exkgxsjh.cloudfront.net/assets/images/store-np.jpg" alt=""
-                            class="w-100">
+                            class="w-100 visible-xs">
                     </div>
                     <div class="col-sm-12 col-xs-24 p-0 box">
                         <div class="py-5">
-                            <h3>Northpoint City Showroom</h3>
-                            <p class="my-3">
+                            <h5 class="mb-3">Northpoint City Showroom</h5>
+                            <p class="mb-2">
+                                Yishun Ave 2, North Wing, <br />
+                                #01-22 Northpoint City S769098</p>
 
-                                Yishun Ave 2, North Wing<br />
-                                #01-22 Northpoint City S769098<br />
-                                Monday - Sunday: 11am - 9.30pm<br />
-                                +65 6969 1492
+                            <p class="mb-2"> Monday - Thursday: 11am - 9pm<br />
+                                <span class="h9"> (Last appointment at 8pm) </span>
+                            </p>
+
+                            <p class="mb-2"> Friday - Sunday: 11am - 9.30pm<br />
+                                <span class="h9"> (Last appointment at 8.30pm) </span>
+                            </p>
+
+                            <p class="mb-3">
+                                Call: <a href="tel:+6569691492">+65 6969 1492</a>
                             </p>
                             <a href="https://www.michaeltrio.com/make-an-appointment?location=np"
                                 class="btn btn-blue small-btn">Book
