--- a/jewel.html
+++ b/jewel.html
@@ -144,7 +144,7 @@
             width: 347px;
         }
 
-        .small-btn {
+        .mt2021 .small-btn {
             width: 217px;
         }
 
@@ -564,31 +564,31 @@
         }
 
         @media (max-width:767.98px) {
-            .mt2021 .mt2021 h1 {
+            .mt2021 h1 {
                 font-size: 30px;
             }
 
-            .mt2021 .mt2021 h2 {
+            .mt2021 h2 {
                 font-size: 25px;
             }
 
-            .mt2021 .mt2021 h3 {
+            .mt2021 h3 {
                 font-size: 25px;
             }
 
-            .mt2021 .mt2021 h4 {
+            .mt2021 h4 {
                 font-size: 22px;
             }
 
-            .mt2021 .mt2021 h5 {
+            .mt2021 h5 {
                 font-size: 18px;
             }
 
-            .mt2021 .mt2021 h6 {
+            .mt2021 h6 {
                 font-size: 17px;
             }
 
-            .mt2021 .mt2021 p {
+            .mt2021 p {
                 font-size: 17px;
             }
 
@@ -780,7 +780,7 @@
                         </a>
                     </div>
                     <h1 class="text-center pt-5">Bracelets</h1>
-                    <p class="text-center py-3 px-3">Hand-crafted style to flatter every jewellery style. </p>
+                    <p class="text-center py-3 px-3">Hand-crafted to flatter every jewellery style. </p>
                 </div>
             </div>
             <div class="w-sm-50 bg-blue-img box overflow-hidden">
@@ -814,7 +814,7 @@
                         </a>
                     </div>
                     <h1 class="text-center pt-5">Bracelets</h1>
-                    <p class="text-center py-3 px-3">Hand-crafted style to flatter every jewellery style. </p>
+                    <p class="text-center py-3 px-3">Hand-crafted to flatter every jewellery style. </p>
                 </div>
             </div>
         </section>
