--- a/t&c.html
+++ b/t&c.html
@@ -474,167 +474,6 @@
 
         }
 
-        /* @@@@@@@@@@@@@@@@@@@@@@@@@@@@@ Fonts @@@@@@@@@@@@@@@@@@@@@@@@@@@@@ */
-        .font-weight-bold {
-            font-weight: 700;
-        }
-
-        .font-weight-normal {
-            font-weight: 400;
-        }
-
-        .font-weight-light {
-            font-weight: 300;
-        }
-
-        .mt2021 h1,
-        .mt2021 h2,
-        .mt2021 h4 {
-            font-family: 'Times New Roman';
-        }
-
-        .mt2021 h3,
-        .mt2021 h5,
-        .mt2021 h6,
-        .mt2021 p,
-        .mt2021 .h7,
-        .mt2021 .h8,
-        .mt2021 .h9,
-        .mt2021 .h10,
-        .mt2021 .h11,
-        .mt2021 .h12 {
-            font-family: 'Montserrat';
-        }
-
-        .mt2021 h1 {
-            font-size: 36px;
-        }
-
-        .mt2021 h2 {
-            font-size: 32px;
-        }
-
-        .mt2021 h3 {
-            font-size: 32px;
-        }
-
-        .mt2021 h4 {
-            font-size: 25px;
-        }
-
-        .mt2021 h5 {
-            font-size: 22px;
-        }
-
-        .mt2021 h6 {
-            font-size: 17px;
-        }
-
-        .mt2021 p {
-            font-size: 17px;
-        }
-
-        .h7 {
-            font-size: 18px;
-        }
-
-        .h8 {
-            font-size: 16px;
-        }
-
-        .h9 {
-            font-size: 14px;
-        }
-
-        .h10 {
-            font-size: 13px;
-        }
-
-        .h11 {
-            font-size: 12px;
-        }
-
-        .h12 {
-            font-size: 11px;
-        }
-
-        @media (max-width:767.98px) {
-            .mt2021 .mt2021 h1 {
-                font-size: 30px;
-            }
-
-            .mt2021 .mt2021 h2 {
-                font-size: 25px;
-            }
-
-            .mt2021 .mt2021 h3 {
-                font-size: 25px;
-            }
-
-            .mt2021 .mt2021 h4 {
-                font-size: 22px;
-            }
-
-            .mt2021 .mt2021 h5 {
-                font-size: 18px;
-            }
-
-            .mt2021 .mt2021 h6 {
-                font-size: 17px;
-            }
-
-            .mt2021 .mt2021 p {
-                font-size: 17px;
-            }
-
-            .h7 {
-                font-size: 16px;
-            }
-
-            .h8 {
-                font-size: 15px;
-            }
-
-        }
-
-        @media (max-width:480px) {
-            .mt2021 h1 {
-                font-size: 25px;
-            }
-
-            .mt2021 h2 {
-                font-size: 20px;
-            }
-
-            .mt2021 h3 {
-                font-size: 20px;
-            }
-
-            .mt2021 h4 {
-                font-size: 18px;
-            }
-
-            .mt2021 h5 {
-                font-size: 17px;
-            }
-
-            .mt2021 h6 {
-                font-size: 14px;
-            }
-
-            .mt2021 p {
-                font-size: 14px;
-            }
-
-            .h7 {
-                font-size: 15px;
-            }
-
-            .h8 {
-                font-size: 14px;
-            }
-
-        }
 
         /* @@@@@@@@@@@@@@@@@@@@@@@@@@@@@ Fonts @@@@@@@@@@@@@@@@@@@@@@@@@@@@@ */
         .font-weight-bold {
@@ -721,31 +560,31 @@
         }
 
         @media (max-width:767.98px) {
-            .mt2021 .mt2021 h1 {
+            .mt2021 h1 {
                 font-size: 30px;
             }
 
-            .mt2021 .mt2021 h2 {
+            .mt2021 h2 {
                 font-size: 25px;
             }
 
-            .mt2021 .mt2021 h3 {
+            .mt2021 h3 {
                 font-size: 25px;
             }
 
-            .mt2021 .mt2021 h4 {
+            .mt2021 h4 {
                 font-size: 22px;
             }
 
-            .mt2021 .mt2021 h5 {
+            .mt2021 h5 {
                 font-size: 18px;
             }
 
-            .mt2021 .mt2021 h6 {
+            .mt2021 h6 {
                 font-size: 17px;
             }
 
-            .mt2021 .mt2021 p {
+            .mt2021 p {
                 font-size: 17px;
             }
 
@@ -1186,30 +1025,30 @@
             background-color: #8a6d3b;
         }
 
-        .mt2021 .mt2021 .panel-warning>.panel-footer+.panel-collapse>.panel-body {
+        .mt2021 .panel-warning>.panel-footer+.panel-collapse>.panel-body {
             border-bottom-color: #faebcc;
         }
 
-        .mt2021 .mt2021 .panel-danger {
+        .mt2021 .panel-danger {
             border-color: #ebccd1;
         }
 
-        .mt2021 .mt2021 .panel-danger>.panel-heading {
+        .mt2021 .panel-danger>.panel-heading {
             color: #a94442;
             background-color: #f2dede;
             border-color: #ebccd1;
         }
 
-        .mt2021 .mt2021 .panel-danger>.panel-heading+.panel-collapse>.panel-body {
+        .mt2021 .panel-danger>.panel-heading+.panel-collapse>.panel-body {
             border-top-color: #ebccd1;
         }
 
-        .mt2021 .mt2021 .panel-danger>.panel-heading .badge {
+        .mt2021 .panel-danger>.panel-heading .badge {
             color: #f2dede;
             background-color: #a94442;
         }
 
-        .mt2021 .mt2021 .panel-danger>.panel-footer+.panel-collapse>.panel-body {
+        .mt2021 .panel-danger>.panel-footer+.panel-collapse>.panel-body {
             border-bottom-color: #ebccd1;
         }
 
@@ -1243,16 +1082,10 @@
 
         /* @@@@@@@@@@@@@@@@@@@@@@@@@@@@@ T&C @@@@@@@@@@@@@@@@@@@@@@@@@@@@@ */
         /* @@@@@@@@@@@@@@@@@@@@@@@@@@@@@ T&C @@@@@@@@@@@@@@@@@@@@@@@@@@@@@ */
-        p {
-            padding: 0;
-            letter-spacing: 0.02em;
-            text-align: justify;
-        }
 
         .terms ul,
         .terms ol {
             font-size: 14px;
-            text-align: justify;
             padding-left: 20px;
         }
 
@@ -1276,29 +1109,6 @@
             color: var(--darkblue);
         }
 
-
-        .mt2021 ul,
-        .mt2021 ol {
-            font-size: 14px;
-            text-align: justify;
-            padding-left: 20px;
-        }
-
-        .mt2021 ul {
-            list-style-type: disc;
-        }
-
-        .mt2021 .nav>li>a {
-            padding: 15px;
-            font-weight: 500;
-            text-align: left;
-        }
-
-        .mt2021 ol {
-            list-style-type: auto;
-        }
-
-
         .mt2021 .panel-title:after {
             font-family: FontAwesome;
             content: "\f106";
@@ -1309,17 +1119,6 @@
         .mt2021 .panel.active .panel-title:after {
             content: "\f107";
         }
-
-
-        .mt2021 .panel-title>a {
-            display: block;
-            color: var(--black);
-        }
-
-        .mt2021 .panel-title>a:hover {
-            color: var(--black);
-        }
-
 
         .mt2021 .panel-default>.panel-heading {
             transition: all ease 1s;
