--- a/appointment-block.html
+++ b/appointment-block.html
@@ -71,6 +71,7 @@
             color: var(--black);
         }
 
+
         html,
         .mt2021,
         .mt2021 h1,
@@ -83,6 +84,8 @@
             padding: 0;
             color: var(--black);
         }
+
+
 
         .p-wrapper {
             max-width: 900px;
@@ -318,6 +321,7 @@
             align-items: flex-start;
         }
 
+
         @media (max-width: 1199.98px) {
 
             .diamond-image img {
@@ -473,8 +477,6 @@
             }
 
         }
-
-
 
         /* @@@@@@@@@@@@@@@@@@@@@@@@@@@@@ Fonts @@@@@@@@@@@@@@@@@@@@@@@@@@@@@ */
         .font-weight-bold {
@@ -638,163 +640,157 @@
 
         }
 
-        /* @@@@@@@@@@@@@@@@@@@@@@@@@@@@@ Locations @@@@@@@@@@@@@@@@@@@@@@@@@@@@@ */
+        /* @@@@@@@@@@@@@@@@@@@@@@@@@@@@@ Appintment Block @@@@@@@@@@@@@@@@@@@@@@@@@@@@@ */
 
 
-        .jem-bg {
-            background-image: url(https://d213t4exkgxsjh.cloudfront.net/assets/images/shop-jem-lg.jpg);
-            background-size: cover;
-            background-position: top center;
 
+        .mt2021 .appointment-block h1,
+        .mt2021 .appointment-block h2,
+        .mt2021 .appointment-block h3,
+        .mt2021 .appointment-block h4,
+        .mt2021 .appointment-block h5,
+        .mt2021 .appointment-block h6,
+        .mt2021 .appointment-block p {
+            color: #000;
+            font-weight: 500;
         }
 
-        .tanjong-bg {
-            background-image: url(https://d213t4exkgxsjh.cloudfront.net/assets/images/shop-tp-lg.jpg);
-            background-size: cover;
-            background-position: top center;
-
+        .mt2021 .appointment-block .btn {
+            font-weight: 500;
         }
 
-        .np-bg {
-            background-image: url(https://d213t4exkgxsjh.cloudfront.net/assets/images/shop-northpoint-lg.jpg);
-            background-size: cover;
-            background-position: top center;
+        .mt2021 .appointment-block .text-blue {
+            color: var(--darkblue);
         }
 
-        .mt2021 a {
-            color: var(--companyblue);
+        .text-underline {
+            text-decoration: underline;
         }
 
-        @media (max-width:767.98px) {
-
-            .jem-bg,
-            .tanjong-bg,
-            .np-bg {
-                background-image: none;
-            }
-
+        .mt2021 .appointment-block .ic-location:before {
+            color: #000;
+            font-weight: 500;
+            font-size: 20px;
         }
     </style>
 </head>
 
 <body>
-
     <div class="mt2021">
-        <section>
+        <div class="appointment-block">
+            <div class="p-2 mt-3">
+                <h5 class="mb-0 font-weight-light text-underline">LOCATIONS</h5>
+                <div class="row mt-3">
+                    <div class="col-xs-2"><span class="ic ic-location"></span></div>
+                    <div class="col-xs-22">
+                        <h5 class="text-blue">TANJONG PAGAR</h5>
+                        <!-- Location Menu -->
+                        <div class="my-3 locations-link">
+                            <p class="mb-3">
+                                91 Tanjong Pagar Road S088512 </p>
 
-            <h3 class="mb-5 text-center"> Our Showrooms</h3>
-            <div class="container mb-5 bg-lightblue">
-                <div class="row">
-                    <div class="col-sm-12 box p-0 tanjong-bg">
-                        <div class="w-100">
-                            <img src="https://d213t4exkgxsjh.cloudfront.net/assets/images/shop-tp-lg.jpg" alt=""
-                                class="w-100 visible-xs">
-                        </div>
-                    </div>
-                    <div class="col-sm-12 box px-5 py-5">
-                        <div class="text-left">
-                            <h3 class="mb-3 ">TANJONG PAGAR</h3>
-                            <p class="h9 mb-3">
-
-                                91 Tanjong Pagar Road<br />
-                                Singapore 088512<br />
-                                Monday - Sunday: 12pm - 8.30pm<br />
-                                (Last appointment at 7:30pm)
+                            <p class="mb-3"> Monday - Sunday: 12pm - 8.30pm<br />
+                                <span class="h9"> (Last appointment at 7:30pm) </span>
                             </p>
 
-                            <p class="h9">
-                                Call: <a href="tel:+6562990110"> +65 6299 0110</a><br />
-
+                            <p class="mb-3">
+                                Call: <a href="tel:+6562990110">+65 62990110</a>
+                            </p>
+                            <p class="mb-3">
                                 Email: <a href="mailto:service@michaeltrio.com">service@michaeltrio.com</a>
                             </p>
-                            <div class="py-3">
-                                <a href="https://www.michaeltrio.com/make-an-appointment?location=tp"
-                                    class="btn btn-blue large-btn">Schedule An Appointment </a>
-                            </div>
-
+                            <a href="{{store url=''}}make-an-appointment?location=tp" class="btn btn-blue">Schedule An
+                                Appointment </a>
                         </div>
+                        <!-- Location Menu End -->
+
                     </div>
                 </div>
-            </div>
-            <div class="container mb-5 bg-lightblue">
-                <div class="row">
-                    <div class="col-sm-12 box p-0 jem-bg">
-                        <div class="w-100">
-                            <img src="https://d213t4exkgxsjh.cloudfront.net/assets/images/shop-jem-lg.jpg" alt=""
-                                class="w-100 visible-xs">
-                        </div>
-                    </div>
-                    <div class="col-sm-12 box px-5 py-5">
-                        <div class="text-left">
-                            <h3 class="mb-3 ">JEM</h3>
-                            <p class="h9 mb-3">
+                <div class="row mt-3">
+                    <div class="col-xs-2"><span class="ic ic-location"></span></div>
+                    <div class="col-xs-22">
+                        <h5 class="text-blue">JEM</h5>
+
+                        <!-- Location Menu -->
+                        <div class="my-3 locations-link">
+                            <p class="mb-3">
                                 50 Jurong Gateway Rd, #01-60,<br />
-                                Singapore 608549 <br />
-                                Monday - Thursday: 11am - 9pm <br />
-                                (Last appointment at 8pm) <br />
-                                Friday - Sunday: 11am - 9.30pm <br />
-                                (Last appointment at 8.30pm)
+                                S608549</p>
+
+                            <p class="mb-3"> Monday - Thursday: 11am - 9pm<br />
+                                <span class="h9"> (Last appointment at 8pm) </span>
                             </p>
 
-                            <p class="h9">
-                                Call: <a href="tel:+6569513296"> +65 6951 3296</a><br />
+                            <p class="mb-3"> Friday - Sunday: 11am - 9.30pm<br />
+                                <span class="h9"> (Last appointment at 8.30pm) </span>
+                            </p>
 
+                            <p class="mb-3">
+                                Call: <a href="tel:+6569513296">+65 6951 3296</a>
+                            </p>
+                            <p class="mb-3">
                                 Email: <a href="mailto:service@michaeltrio.com">service@michaeltrio.com</a>
                             </p>
-                            <div class="py-3">
-                                <a href="https://www.michaeltrio.com/make-an-appointment?location=jem"
-                                    class="btn btn-blue large-btn">Schedule An Appointment </a>
-                            </div>
-
+                            <a href="{{store url=''}}make-an-appointment?location=tp" class="btn btn-blue">Schedule An
+                                Appointment </a>
                         </div>
+                        <!-- Location Menu End -->
+
                     </div>
                 </div>
-            </div>
+                <div class="row mt-3">
+                    <div class="col-xs-2"><span class="ic ic-location"></span></div>
+                    <div class="col-xs-22">
+                        <h5 class="text-blue">NORTHPOINT CENTER</h5>
 
+                        <!-- Location Menu -->
+                        <div class="my-3 locations-link">
+                            <p class="mb-3">
+                                Yishun Ave 2, North Wing, <br />
+                                #01-22 Northpoint City S769098</p>
 
-
-            <div class="container bg-lightblue">
-                <div class="row">
-                    <div class="col-sm-12 box p-0 np-bg">
-                        <div class="w-100">
-                            <img src="https://d213t4exkgxsjh.cloudfront.net/assets/images/shop-northpoint-lg.jpg" alt=""
-                                class="w-100 visible-xs">
-                        </div>
-                    </div>
-                    <div class="col-sm-12 box px-5 py-5">
-                        <div class="text-left">
-                            <h3 class="mb-3 ">NORTHPOINT CITY</h3>
-                            <p class="h9 mb-3">
-
-                                Yishun Ave 2, North Wing, #01-22 Northpoint City<br />
-                                Singapore 769098<br />
-                                Monday - Thursday: 11am - 9pm<br />
-                                (Last appointment at 8pm)<br />
-                                Friday - Sunday: 11am - 9.30pm<br />
-                                (Last appointment at 8.30pm)
+                            <p class="mb-3"> Monday - Thursday: 11am - 9pm<br />
+                                <span class="h9"> (Last appointment at 8pm) </span>
                             </p>
 
-                            <p class="h9">
-                                Call: <a href="tel:+6569691492"> +65 6969 1492</a><br />
+                            <p class="mb-3"> Friday - Sunday: 11am - 9.30pm<br />
+                                <span class="h9"> (Last appointment at 8.30pm) </span>
+                            </p>
 
+                            <p class="mb-3">
+                                Call: <a href="tel:+6569691492">+65 6969 1492</a>
+                            </p>
+                            <p class="mb-3">
                                 Email: <a href="mailto:service@michaeltrio.com">service@michaeltrio.com</a>
                             </p>
-                            <div class="py-3">
-                                <a href="https://www.michaeltrio.com/make-an-appointment?location=np"
-                                    class="btn btn-blue large-btn">Schedule An Appointment </a>
-                            </div>
-
+                            <a href="{{store url=''}}make-an-appointment?location=tp" class="btn btn-blue">Schedule An
+                                Appointment </a>
                         </div>
+                        <!-- Location Menu End -->
+
                     </div>
                 </div>
-            </div>
-        </section>
 
-        <div class="section">
-            <div class="container">
-                <p class="mt-5 text-center">Walk-ins will be subjected to the availability of appointment slots. </p>
+                <div class="row mt-3">
+                    <div class="col-xs-2"><span class="ic ic-location"></span></div>
+                    <div class="col-xs-22">
+                        <h5 class="text-blue">TAMPINES ONE</h5>
+
+                        <p class="h9">
+                            10 Tampines Central 1, <br />
+                            Singapore 529536<br />
+                            <a href="tel:+6512345678">+65 1234 5678</a><br />
+                            (Everyday, 11pm - 9.30pm)
+
+                        </p>
+                        <a href="{{store url=''}}make-an-appointment" class="btn btn-blue">Book
+                            Appointment</a>
+
+                    </div>
+                </div>
             </div>
         </div>
+
     </div>
 </body>
 
