--- a/appointment.html
+++ b/appointment.html
@@ -169,6 +169,11 @@
             display: flex;
         }
 
+        .mt2021 .row.heared {
+            display: block;
+        }
+
+
         .diamond-image img {
             width: 500px;
         }
@@ -638,163 +643,103 @@
 
         }
 
-        /* @@@@@@@@@@@@@@@@@@@@@@@@@@@@@ Locations @@@@@@@@@@@@@@@@@@@@@@@@@@@@@ */
+        /* @@@@@@@@@@@@@@@@@@@@@@@@@@@@@ Ring-sizer @@@@@@@@@@@@@@@@@@@@@@@@@@@@@ */
+        /* @@@@@@@@@@@@@@@@@@@@@@@@@@@@@ Ring-sizer @@@@@@@@@@@@@@@@@@@@@@@@@@@@@ */
 
-
-        .jem-bg {
-            background-image: url(https://d213t4exkgxsjh.cloudfront.net/assets/images/shop-jem-lg.jpg);
-            background-size: cover;
-            background-position: top center;
-
+        p {
+            padding: 0;
+            letter-spacing: 0.02em;
         }
 
-        .tanjong-bg {
-            background-image: url(https://d213t4exkgxsjh.cloudfront.net/assets/images/shop-tp-lg.jpg);
-            background-size: cover;
-            background-position: top center;
-
+        button:hover {
+            border-color: transparent;
         }
 
-        .np-bg {
-            background-image: url(https://d213t4exkgxsjh.cloudfront.net/assets/images/shop-northpoint-lg.jpg);
-            background-size: cover;
-            background-position: top center;
+        .ring-iframe {
+            width: 100%;
+            height: 350px;
         }
 
-        .mt2021 a {
-            color: var(--companyblue);
+        .ring-sizer h1,
+        .ring-sizer h2,
+        .ring-sizer h3,
+        .ring-sizer h4,
+        .ring-sizer h5,
+        .ring-sizer h6,
+        .ring-sizer p,
+        .ring-sizer .h7,
+        .ring-sizer .h8,
+        .ring-sizer .h9,
+        .ring-sizer .h10,
+        .ring-sizer .h11,
+        .ring-sizer .h12 {
+            color: var(--black);
         }
 
-        @media (max-width:767.98px) {
+        .mt2021 .text-brown {
+            color: #c98d6f;
+        }
 
-            .jem-bg,
-            .tanjong-bg,
-            .np-bg {
-                background-image: none;
+        .mt2021 .ring-sizer a {
+            color: var(--companyblue) !important;
+        }
+
+        .mt2021 .ring-sizer a:hover {
+            color: var(--darkblue) !important;
+        }
+
+        .mt2021 h4.htitle {
+            font-family: 'Montserrat';
+        }
+
+        @media (max-width:480px) {
+            .mt2021 .pull-left.mr-4 {
+                margin-right: 1rem !important;
             }
-
         }
     </style>
+
+
+    <script>
+        require(['jquery'], function ($) {
+
+            $(document).ready(function () {
+
+                var submit = $('button');
+                submit.removeClass(" action submit primary");
+                submit.addClass("btn btn-blue small-btn");
+
+            });
+        });
+    </script>
 </head>
 
 <body>
-
     <div class="mt2021">
-        <section>
 
-            <h3 class="mb-5 text-center"> Our Showrooms</h3>
-            <div class="container mb-5 bg-lightblue">
-                <div class="row">
-                    <div class="col-sm-12 box p-0 tanjong-bg">
-                        <div class="w-100">
-                            <img src="https://d213t4exkgxsjh.cloudfront.net/assets/images/shop-tp-lg.jpg" alt=""
-                                class="w-100 visible-xs">
-                        </div>
-                    </div>
-                    <div class="col-sm-12 box px-5 py-5">
-                        <div class="text-left">
-                            <h3 class="mb-3 ">TANJONG PAGAR</h3>
-                            <p class="h9 mb-3">
+        <section id="make-appointment">
+            <div class="container">
+                <div class="col-md-4"></div>
+                <div class="col-md-16 p-0">
+                    <h3 class="mb-4">
+                        Make an Appointment
+                    </h3>
+                    <p class="h9">
+                        While we try our best to accept walk-in customers, we would advise that you make an appointment
+                        before coming down to our showroom. The appointment usually lasts for an hour, where our
+                        consultants will do our best to answer your queries, provide more knowledge and help you make
+                        the best decisions about your desired engagement ring, wedding bands or other jewelleries.
+                    </p>
 
-                                91 Tanjong Pagar Road<br />
-                                Singapore 088512<br />
-                                Monday - Sunday: 12pm - 8.30pm<br />
-                                (Last appointment at 7:30pm)
-                            </p>
-
-                            <p class="h9">
-                                Call: <a href="tel:+6562990110"> +65 6299 0110</a><br />
-
-                                Email: <a href="mailto:service@michaeltrio.com">service@michaeltrio.com</a>
-                            </p>
-                            <div class="py-3">
-                                <a href="https://www.michaeltrio.com/make-an-appointment?location=tp"
-                                    class="btn btn-blue large-btn">Schedule An Appointment </a>
-                            </div>
-
-                        </div>
-                    </div>
-                </div>
-            </div>
-            <div class="container mb-5 bg-lightblue">
-                <div class="row">
-                    <div class="col-sm-12 box p-0 jem-bg">
-                        <div class="w-100">
-                            <img src="https://d213t4exkgxsjh.cloudfront.net/assets/images/shop-jem-lg.jpg" alt=""
-                                class="w-100 visible-xs">
-                        </div>
-                    </div>
-                    <div class="col-sm-12 box px-5 py-5">
-                        <div class="text-left">
-                            <h3 class="mb-3 ">JEM</h3>
-                            <p class="h9 mb-3">
-                                50 Jurong Gateway Rd, #01-60,<br />
-                                Singapore 608549 <br />
-                                Monday - Thursday: 11am - 9pm <br />
-                                (Last appointment at 8pm) <br />
-                                Friday - Sunday: 11am - 9.30pm <br />
-                                (Last appointment at 8.30pm)
-                            </p>
-
-                            <p class="h9">
-                                Call: <a href="tel:+6569513296"> +65 6951 3296</a><br />
-
-                                Email: <a href="mailto:service@michaeltrio.com">service@michaeltrio.com</a>
-                            </p>
-                            <div class="py-3">
-                                <a href="https://www.michaeltrio.com/make-an-appointment?location=jem"
-                                    class="btn btn-blue large-btn">Schedule An Appointment </a>
-                            </div>
-
-                        </div>
-                    </div>
-                </div>
-            </div>
-
-
-
-            <div class="container bg-lightblue">
-                <div class="row">
-                    <div class="col-sm-12 box p-0 np-bg">
-                        <div class="w-100">
-                            <img src="https://d213t4exkgxsjh.cloudfront.net/assets/images/shop-northpoint-lg.jpg" alt=""
-                                class="w-100 visible-xs">
-                        </div>
-                    </div>
-                    <div class="col-sm-12 box px-5 py-5">
-                        <div class="text-left">
-                            <h3 class="mb-3 ">NORTHPOINT CITY</h3>
-                            <p class="h9 mb-3">
-
-                                Yishun Ave 2, North Wing, #01-22 Northpoint City<br />
-                                Singapore 769098<br />
-                                Monday - Thursday: 11am - 9pm<br />
-                                (Last appointment at 8pm)<br />
-                                Friday - Sunday: 11am - 9.30pm<br />
-                                (Last appointment at 8.30pm)
-                            </p>
-
-                            <p class="h9">
-                                Call: <a href="tel:+6569691492"> +65 6969 1492</a><br />
-
-                                Email: <a href="mailto:service@michaeltrio.com">service@michaeltrio.com</a>
-                            </p>
-                            <div class="py-3">
-                                <a href="https://www.michaeltrio.com/make-an-appointment?location=np"
-                                    class="btn btn-blue large-btn">Schedule An Appointment </a>
-                            </div>
-
-                        </div>
+                    <div class="mb-5 ">
+                        {{block class="Michaeltrio\Customer\Block\Appointment"
+                        template='Michaeltrio_Customer::appointment.phtml'}}
                     </div>
                 </div>
             </div>
         </section>
 
-        <div class="section">
-            <div class="container">
-                <p class="mt-5 text-center">Walk-ins will be subjected to the availability of appointment slots. </p>
-            </div>
-        </div>
+
     </div>
 </body>
 
