--- a/pendant.html
+++ b/pendant.html
@@ -3,6 +3,8 @@
 
 <head>
   <style>
+    /* @@@@@@@@@@@@@@@@@@@@@@@@@@@@@ Common CSS @@@@@@@@@@@@@@@@@@@@@@@@@@@@@ */
+
     * {
       box-sizing: border-box;
     }
@@ -70,7 +72,7 @@
     }
 
     html,
-    body.mt2021,
+    .mt2021,
     .mt2021 h1,
     .mt2021 h2,
     .mt2021 h3,
@@ -78,7 +80,6 @@
     .mt2021 h5,
     .mt2021 h6,
     .mt2021 p {
-      margin: 0;
       padding: 0;
       color: var(--black);
     }
@@ -86,6 +87,10 @@
     .p-wrapper {
       max-width: 900px;
       margin: auto;
+    }
+
+    .mt2021 .text-white {
+      color: white;
     }
 
     .mt2021 h1,
@@ -145,7 +150,7 @@
       width: 347px;
     }
 
-    .small-btn {
+    .mt2021 .small-btn {
       width: 217px;
     }
 
@@ -171,8 +176,6 @@
     .columns a {
       color: var(--black);
     }
-
-
 
     .flex-wrap {
       flex-wrap: wrap;
@@ -315,10 +318,6 @@
       align-items: flex-start;
     }
 
-
-    /* @@@@@@@@@@@@@@@@@@@@@@@@@@@@@ Medium Devices @@@@@@@@@@@@@@@@@@@@@@@@@@@@@ */
-    /* @@@@@@@@@@@@@@@@@@@@@@@@@@@@@ Medium Devices @@@@@@@@@@@@@@@@@@@@@@@@@@@@@ */
-
     @media (max-width: 1199.98px) {
 
       .diamond-image img {
@@ -337,8 +336,6 @@
 
     }
 
-    /* @@@@@@@@@@@@@@@@@@@@@@@@@@@@@ Small Devices @@@@@@@@@@@@@@@@@@@@@@@@@@@@@ */
-    /* @@@@@@@@@@@@@@@@@@@@@@@@@@@@@ Small Devices @@@@@@@@@@@@@@@@@@@@@@@@@@@@@ */
 
     @media (max-width: 767.98px) {
 
@@ -418,8 +415,6 @@
 
     }
 
-    /* @@@@@@@@@@@@@@@@@@@@@@@@@@@@@ Mobile Phone @@@@@@@@@@@@@@@@@@@@@@@@@@@@@ */
-    /* @@@@@@@@@@@@@@@@@@@@@@@@@@@@@ Mobile Phone @@@@@@@@@@@@@@@@@@@@@@@@@@@@@ */
 
     @media (max-width: 480px) {
 
@@ -478,6 +473,7 @@
       }
 
     }
+
 
 
     /* @@@@@@@@@@@@@@@@@@@@@@@@@@@@@ Fonts @@@@@@@@@@@@@@@@@@@@@@@@@@@@@ */
@@ -540,64 +536,64 @@
       font-size: 17px;
     }
 
-    .h7 {
+    .mt2021 .h7 {
       font-size: 18px;
     }
 
-    .h8 {
+    .mt2021 .h8 {
       font-size: 16px;
     }
 
-    .h9 {
+    .mt2021 .h9 {
       font-size: 14px;
     }
 
-    .h10 {
+    .mt2021 .h10 {
       font-size: 13px;
     }
 
-    .h11 {
+    .mt2021 .h11 {
       font-size: 12px;
     }
 
-    .h12 {
+    .mt2021 .h12 {
       font-size: 11px;
     }
 
     @media (max-width:767.98px) {
-      .mt2021 .mt2021 h1 {
+      .mt2021 h1 {
         font-size: 30px;
       }
 
-      .mt2021 .mt2021 h2 {
+      .mt2021 h2 {
         font-size: 25px;
       }
 
-      .mt2021 .mt2021 h3 {
+      .mt2021 h3 {
         font-size: 25px;
       }
 
-      .mt2021 .mt2021 h4 {
+      .mt2021 h4 {
         font-size: 22px;
       }
 
-      .mt2021 .mt2021 h5 {
+      .mt2021 h5 {
         font-size: 18px;
       }
 
-      .mt2021 .mt2021 h6 {
+      .mt2021 h6 {
         font-size: 17px;
       }
 
-      .mt2021 .mt2021 p {
+      .mt2021 p {
         font-size: 17px;
       }
 
-      .h7 {
+      .mt2021 .h7 {
         font-size: 16px;
       }
 
-      .h8 {
+      .mt2021 .h8 {
         font-size: 15px;
       }
 
@@ -632,11 +628,11 @@
         font-size: 14px;
       }
 
-      .h7 {
+      .mt2021 .h7 {
         font-size: 15px;
       }
 
-      .h8 {
+      .mt2021 .h8 {
         font-size: 14px;
       }
 
@@ -815,152 +811,155 @@
 
 </head>
 
-<body class="mt2021">
+<body>
+  <div class="mt2021">
 
-  <section class="pt-5 pb-4">
-    <div class="container">
-      <div class="row ">
-        <div class="col-xs-24">
-          <h1 class="text-center">Diamond Solitaire Collection</h1>
-          <h3 class="text-center">by michael trio</h3>
-          <div class="studs-nav pt-3">
+    <section class="pt-5 pb-4">
+      <div class="container">
+        <div class="row ">
+          <div class="col-xs-24">
+            <h1 class="text-center">Diamond Solitaire Collection</h1>
+            <h3 class="text-center">by michael trio</h3>
+            <div class="studs-nav pt-3">
 
-            <a href="https://www.michaeltrio.com/jewellery/earrings/studs" class="btn btn-blue-outline "
-              role="button">Earrings (Studs) </a>
+              <a href="https://www.michaeltrio.com/jewellery/earrings/studs" class="btn btn-blue-outline "
+                role="button">Earrings (Studs) </a>
 
-            <a href="https://www.michaeltrio.com/jewellery/pendant/studs" class="btn btn-blue-outline active"
-              role="button">Pendants </a>
-            <!-- <a href="#" class="btn btn-blue-outline" role="button">Bracelets </a> -->
+              <a href="https://www.michaeltrio.com/jewellery/pendant/studs" class="btn btn-blue-outline active"
+                role="button">Pendants </a>
+              <!-- <a href="#" class="btn btn-blue-outline" role="button">Bracelets </a> -->
 
-            <!-- <a href="#" class="btn btn-blue-outline" role="button">Rings </a> -->
+              <!-- <a href="#" class="btn btn-blue-outline" role="button">Rings </a> -->
 
+            </div>
           </div>
         </div>
       </div>
-    </div>
-  </section>
-  <section class="pandent-banner py-5">
+    </section>
+    <section class="pandent-banner py-5">
 
-    <div class="container ">
+      <div class="container ">
 
-      <div class="row text-center">
-        <div class="col-xs-24">
-          <h1>Diamond Pendants </h1>
-          <p class="my-4 p-wrapper">
-            Our diamond necklaces are the perfect modern and statement piece for every wardrobe. All Solitaire Diamond
-            Necklaces are available in White Gold, Rose Gold, and Yellow Gold.
-          </p>
+        <div class="row text-center">
+          <div class="col-xs-24">
+            <h1>Diamond Pendants </h1>
+            <p class="my-4 p-wrapper">
+              Our diamond necklaces are the perfect modern and statement piece for every wardrobe. All Solitaire Diamond
+              Necklaces are available in White Gold, Rose Gold, and Yellow Gold.
+            </p>
+          </div>
         </div>
+
       </div>
 
-    </div>
+
+    </section>
+    <section class=" py-5">
+
+      <div class="container">
+        <div class="row ">
+          <div class="col-sm-24 text-center">
+            <h1>Diamond Pendant in 14K White Gold</h1>
+
+            <p class="my-4 p-wrapper">Presenting the finest quality-cut diamond, Michael Trio's Round Solitaire Diamond
+              Pendant features an exquisite brilliance that goes beyond the everyday accessories.</p>
+
+          </div>
+        </div>
+
+        <div class="row pt-4">
+          <div class="col-sm-12 text-center pb-4">
+            <iframe src='//spins0.arqspin.com/iframe.html?spin=f8zucozfk120&is=0.16' class="spinning-diamond"
+              scrolling='no' frameborder='0'></iframe>
+          </div>
+          <div class="col-sm-12  ">
+
+            <h1 class="text-center"> Diamond Type</h1>
+
+            <div class="col-xs-8 text-center diamond-type " onclick="activeQuality('PL2021',0)">
+              <div class="diamond-thumbnail bg-white py-3">
+                <div class="diamond-quality"> </i>Best Value</div>
+                <div><i class="fa fa-diamond pr-2 fa-green" aria-hidden="true"></i> Lab Grown</div>
+                <div class="hidden-xs"> Colour: F-G | Clarity: VS</div>
+                <div class="visible-xs"> Colour: F-G <br /> Clarity: VS</div>
+              </div>
+            </div>
+
+            <div class="col-xs-8 text-center diamond-type " onclick="activeQuality('PISI2021',1)">
+              <div class="diamond-thumbnail bg-white py-3">
+                <div class="diamond-quality"> </i>Great Value</div>
+                <div><i class="fa fa-diamond pr-2" aria-hidden="true"></i>Earth Natural</div>
+                <div class="hidden-xs"> Colour: H-I | Clarity: SI</div>
+                <div class="visible-xs"> Colour: H-I <br /> Clarity: SI</div>
+              </div>
+            </div>
 
 
-  </section>
-  <section class=" py-5">
+            <div class="col-xs-8 text-center diamond-type " onclick="activeQuality('PGVS2021',2)">
+              <div class="diamond-thumbnail bg-white  py-3">
+                <div class="diamond-quality"></i>Best Quality</div>
+                <div><i class="fa fa-diamond pr-2" aria-hidden="true"></i>Earth Natural</div>
+                <div class="hidden-xs"> Colour: F-G | Clarity: VS</div>
+                <div class="visible-xs"> Colour: F-G <br /> Clarity: VS</div>
+              </div>
+            </div>
 
-    <div class="container">
-      <div class="row ">
-        <div class="col-sm-24 text-center">
-          <h1>Diamond Pendant in 14K White Gold</h1>
 
-          <p class="my-4 p-wrapper">Presenting the finest quality-cut diamond, Michael Trio's Round Solitaire Diamond
-            Pendant features an exquisite brilliance that goes beyond the everyday accessories.</p>
+
+            <div class="col-xs-24  ">
+              <h1 class="text-center  pt-4"> Choose Your Diamond </h1>
+            </div>
+
+
+            <div id="PL2021" class="row earrings2021" style="flex-wrap: wrap;padding:0px 20px; display: none;"> </div>
+            <div id="PISI2021" class="row earrings2021" style="flex-wrap: wrap;padding:0px 20px; display: none;"> </div>
+            <div id="PGVS2021" class="row earrings2021" style="flex-wrap: wrap;padding:0px 20px; display: none;"> </div>
+
+
+
+          </div>
 
         </div>
+
+
       </div>
 
-      <div class="row pt-4">
-        <div class="col-sm-12 text-center pb-4">
-          <iframe src='//spins0.arqspin.com/iframe.html?spin=f8zucozfk120&is=0.16' class="spinning-diamond"
-            scrolling='no' frameborder='0'></iframe>
-        </div>
-        <div class="col-sm-12  ">
 
-          <h1 class="text-center"> Diamond Type</h1>
+    </section>
 
-          <div class="col-xs-8 text-center diamond-type " onclick="activeQuality('PL2021',0)">
-            <div class="diamond-thumbnail bg-white py-3">
-              <div class="diamond-quality"> </i>Best Value</div>
-              <div><i class="fa fa-diamond pr-2 fa-green" aria-hidden="true"></i> Lab Grown</div>
-              <div class="hidden-xs"> Colour: F-G | Clarity: VS</div>
-              <div class="visible-xs"> Colour: F-G <br /> Clarity: VS</div>
+    <section class="custom-pendant py-5">
+
+      <div class="container ">
+
+
+
+        <div class="row custom-pendant-bg mt-3">
+          <div class="col-sm-12 diamond-image-bg hidden-xs">
+          </div>
+
+          <div class="box  visible-xs mb-3">
+            <img src="{{media url=&quot;0newpendant/Pendant_Contect_Us-_768x432.jpg&quot;}}"
+              alt="P2-Diamond-lifestyle.jpg" class="img-responsive w-100">
+          </div>
+
+          <div class="col-sm-12 box my-5 ">
+            <div>
+              <h1>Customise Your Pendant</h1>
+              <p class="my-4 p-wrapper">At Michael Trio, we provide customisation services for your ideal pendant. Start
+                personalising your very own Solitaire Pendant by selecting your preferred setting and diamond.</p>
+              <a href="https://www.michaeltrio.com/contacts" class="btn btn-blue large-btn " role="button">Customise
+                Here
+              </a>
+
             </div>
           </div>
 
-          <div class="col-xs-8 text-center diamond-type " onclick="activeQuality('PISI2021',1)">
-            <div class="diamond-thumbnail bg-white py-3">
-              <div class="diamond-quality"> </i>Great Value</div>
-              <div><i class="fa fa-diamond pr-2" aria-hidden="true"></i>Earth Natural</div>
-              <div class="hidden-xs"> Colour: H-I | Clarity: SI</div>
-              <div class="visible-xs"> Colour: H-I <br /> Clarity: SI</div>
-            </div>
-          </div>
-
-
-          <div class="col-xs-8 text-center diamond-type " onclick="activeQuality('PGVS2021',2)">
-            <div class="diamond-thumbnail bg-white  py-3">
-              <div class="diamond-quality"></i>Best Quality</div>
-              <div><i class="fa fa-diamond pr-2" aria-hidden="true"></i>Earth Natural</div>
-              <div class="hidden-xs"> Colour: F-G | Clarity: VS</div>
-              <div class="visible-xs"> Colour: F-G <br /> Clarity: VS</div>
-            </div>
-          </div>
-
-
-
-          <div class="col-xs-24  ">
-            <h1 class="text-center  pt-4"> Choose Your Diamond </h1>
-          </div>
-
-
-          <div id="PL2021" class="row earrings2021" style="flex-wrap: wrap;padding:0px 20px; display: none;"> </div>
-          <div id="PISI2021" class="row earrings2021" style="flex-wrap: wrap;padding:0px 20px; display: none;"> </div>
-          <div id="PGVS2021" class="row earrings2021" style="flex-wrap: wrap;padding:0px 20px; display: none;"> </div>
-
-
-
         </div>
-
       </div>
 
 
-    </div>
-
-
-  </section>
-
-  <section class="custom-pendant py-5">
-
-    <div class="container ">
-
-
-
-      <div class="row custom-pendant-bg mt-3">
-        <div class="col-sm-12 diamond-image-bg hidden-xs">
-        </div>
-
-        <div class="box  visible-xs mb-3">
-          <img src="{{media url=&quot;0newpendant/Pendant_Contect_Us-_768x432.jpg&quot;}}"
-            alt="P2-Diamond-lifestyle.jpg" class="img-responsive w-100">
-        </div>
-
-        <div class="col-sm-12 box my-5 ">
-          <div>
-            <h1>Customize your Pendant</h1>
-            <p class="my-4 p-wrapper">At Michael Trio, we provide customisation services for your ideal pendant. Start
-              personalizing your very own Solitaire Pendant by selecting your preferred setting and diamond. </p>
-            <a href="https://www.michaeltrio.com/contacts" class="btn btn-blue large-btn " role="button">Customize Here
-            </a>
-
-          </div>
-        </div>
-
-      </div>
-    </div>
-
-
-  </section>
+    </section>
+  </div>
 
 
   <script>
