--- a/landing_pages/location.html
+++ b/landing_pages/location.html
@@ -641,24 +641,32 @@
         /* @@@@@@@@@@@@@@@@@@@@@@@@@@@@@ Locations @@@@@@@@@@@@@@@@@@@@@@@@@@@@@ */
 
 
-        .jem-bg {
-            background-image: url(https://d213t4exkgxsjh.cloudfront.net/assets/images/shop-jem-lg.jpg);
+
+
+        .tanjong-bg {
+            background-image: url(https://d213t4exkgxsjh.cloudfront.net/assets/images/store-tjp.jpg);
             background-size: cover;
             background-position: top center;
+            min-height: 450px;
+
 
         }
 
-        .tanjong-bg {
-            background-image: url(https://d213t4exkgxsjh.cloudfront.net/assets/images/shop-tp-lg.jpg);
+        .jem-bg {
+            background-image: url(https://d213t4exkgxsjh.cloudfront.net/assets/images/store-jem.jpg);
             background-size: cover;
             background-position: top center;
+            min-height: 450px;
+
 
         }
 
         .np-bg {
-            background-image: url(https://d213t4exkgxsjh.cloudfront.net/assets/images/shop-northpoint-lg.jpg);
+            background-image: url(https://d213t4exkgxsjh.cloudfront.net/assets/images/store-np.jpg);
             background-size: cover;
             background-position: top center;
+            min-height: 450px;
+
         }
 
         .mt2021 a {
